<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.userList.UserList">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/weatherLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/ToolbarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/app_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_weather_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxWidth="150dp"
                            android:singleLine="true"
                            android:text="@string/location_required"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/textView_weather_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/weather_detail"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView_weather_icon"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        app:srcCompat="@drawable/ic_baseline_place_24"
                        tools:src="@tools:sample/avatars" />

                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:id="@+id/editTextTextPersonName"
            style="@style/SearchBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/editText_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/search"
                    android:imeOptions="actionNone"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="#9A9A9A" />

                <ImageButton
                    android:id="@+id/imageButton_close"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/close_icon"
                    android:visibility="invisible"
                    app:tint="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeTo_refresh_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_User_List"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_search_user_List"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/swipeTo_refresh_layout"
            app:layout_constraintEnd_toEndOf="@+id/swipeTo_refresh_layout"
            app:layout_constraintStart_toStartOf="@+id/swipeTo_refresh_layout"
            app:layout_constraintTop_toTopOf="@+id/swipeTo_refresh_layout" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginEnd="153dp"
            android:text="@string/retry"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/swipeTo_refresh_layout"
            app:layout_constraintEnd_toEndOf="@+id/swipeTo_refresh_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/swipeTo_refresh_layout"
            app:layout_constraintTop_toTopOf="@+id/swipeTo_refresh_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>